--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "devDependencies": {
     "firebase-tools": "3.17.4",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "rimraf": "2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build-deploy": "react-scripts build && firebase deploy"
+    "build": "rimraf build && react-scripts build",
+    "deploy": "npm run build && firebase deploy"
   }
 }
